@@ -1,3 +1,8 @@
+2003-12-02  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_strconv.c (bk_string_atoflag): parse flags without [] for
+	XXE-friendly featuresets
+	
 2003-12-01  Seth Robertson  <seth@blue.sysdetect.com>
 
 	* lib/b_pollio.c (bk_polling_io_close): Don't try to flush writes
